--- a/views/user/new.ejs
+++ b/views/user/new.ejs
@@ -1,341 +1,30 @@
 <%- include('../partials/header') %>
 
-<main>
+<main class="flex justify-between">
+<section class="justify-start">
+    <%- include('../partials/userProfile') %>
+</section>
 
+<section class="flex justify-center items-center mr-96 pr-44 mb-80">
 
-    <div class="font-[sans-serif] bg-gray-200">
-        <div class="grid lg:grid-cols-2 xl:grid-cols-3 gap-4 h-full">
-          <div class="bg-stone-600 lg:h-screen lg:sticky lg:top-0">
-            <div class="relative h-full">
-              <div class="p-8 lg:overflow-auto lg:h-[calc(100vh-60px)]">
-            
-                <h2 class="text-2xl font-bold text-white">Order Summary</h2>
-                <div class="space-y-6 mt-10">
+<div class="w-full max-w-sm bg-white  ">
+    <div class="flex justify-center px-52 pt-1">
 
-                    <% products.forEach( item => { %>
-                  <div class="grid sm:grid-cols-2 items-start gap-6">
-                    <div class="shrink-0 bg-gray-50 rounded-lg h-56 w-40">
-                      <img src='/product_images/<%= item.productImage[0] %>' class="w-full object-contain rounded-lg h-56" />
-                    </div>
-                    <div>
-                      <h3 class="text-base text-white"><%= item.productName %></h3>
-                      <ul class="text-xs text-white space-y-3 mt-4">
-                        <li class="flex flex-wrap gap-4">Size<span class="ml-auto"><%= item.size %> </span></li>
-                        <li class="flex flex-wrap gap-4">Quantity <span class="ml-auto"><%= quantity %> </span></li>
-                        <li class="flex flex-wrap gap-4">Total Price <span class="ml-auto"><%=  item.price %></span></li>
-                      </ul>
-                    </div>
-                  </div>
-                     <% }) %>
+    </div>
+    <div class="flex flex-col items-center py-20 h-48 ">
+        <img class="w-24 h-24 mb-3 shadow-lg" src="https://thumbs.dreamstime.com/z/person-gray-photo-placeholder-man-costume-background-146157490.jpg" alt="Bonnie image"/>
+        <h5 class="mt-5 text-xl font-medium text-gray-900 dark:text-black">Name: Syam </h5>
+        <span class="mt-5 text-sm text-gray-950 dark:text-gray-950">Gender: Male</span>
+        <span class="mt-5 mt-5text-sm text-gray-950 dark:text-gray-950">Email: Syamnanadhu3@gmail.com</span>
+        <span class="mt-5 text-sm text-gray-950 dark:text-gray-950">Phone: 8848700346</span>
+        <span class="mt-5 text-sm text-gray-950 dark:text-gray-950">Address: kottaram veetil, panmana, kollam ,india</span>
+       
+    </div>
+</div>
 
-                </div>
-              </div>
-              <div class="absolute left-0 bottom-0 bg-[#444] w-full p-4">
-                <h4 class="flex flex-wrap gap-4 text-base text-white">Total <span id="totalPrice" class="ml-auto"><%= totalPrice %></span></h4>
-              </div>
-            </div>
-          </div>
+</section>
 
-
-          <div class="xl:col-span-2 h-max rounded-md p-8 sticky top-0">
-            <h2 class="text-2xl font-bold text-[#333]">Complete your order</h2>
-            <h1 class="text-1xl font-bold text-[#333] mt-5">Personal Details </h1>
-                <table class="min-w-full divide-y divide-gray-200 mt-5">
-                    <tbody class="bg-white divide-y divide-gray-200">
-                        
-                        <tr>
-                            <td class="px-6 py-4 whitespace-nowrap">
-                                <span class="text-sm font-medium text-gray-900">Name</span>
-                            </td>
-                            <td class="px-6 py-4 whitespace-nowrap">
-                                <span class="text-sm text-gray-700"><%= getUser.name %></span>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="px-6 py-4 whitespace-nowrap">
-                                <span class="text-sm font-medium text-gray-900">Email</span>
-                            </td>
-                            <td class="px-6 py-4 whitespace-nowrap">
-                                <span class="text-sm text-gray-700"><%= getUser.email %></span>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td class="px-6 py-4 whitespace-nowrap">
-                                <span class="text-sm font-medium text-gray-900">Mobile</span>
-                            </td>
-                            <td class="px-6 py-4 whitespace-nowrap">
-                                <span class="text-sm text-gray-700"><%= getUser.phone %></span>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-
-<section>
-
-
-
-              <div>
-                <h3 class="text-lg font-bold text-[#333] mb-6 mt-5">Shipping Address</h3>
-            
-                
-                <div class="overflow-x-auto ">
-                  <table class="min-w-full divide-y divide-gray-200">
-                      <tbody class="bg-white divide-y divide-gray-200">
-                          <tr>
-                              <td class="px-6 py-4 whitespace-nowrap">
-                                  <span class="text-sm font-medium text-gray-900">Name</span>
-                              </td>
-                              <td class="px-6 py-4 whitespace-nowrap">
-                                  <span class="text-sm text-gray-700"><%= address.name %></span>
-                              </td>
-                          </tr>
-                          <tr>
-                              <td class="px-6 py-4 whitespace-nowrap">
-                                  <span class="text-sm font-medium text-gray-900">Mobile No</span>
-                              </td>
-                              <td class="px-6 py-4 whitespace-nowrap">
-                                  <span class="text-sm text-gray-700"><%= address.mobile %></span>
-                              </td>
-                          </tr>
-                          <tr>
-                              <td class="px-6 py-4 whitespace-nowrap">
-                                  <span class="text-sm font-medium text-gray-900">Address</span>
-                              </td>
-                              <td class="px-6 py-4 whitespace-nowrap">
-                                  <span class="text-sm text-gray-700"><%= address.address %></span>
-                              </td>
-                          </tr>
-                          <tr>
-                              <td class="px-6 py-4 whitespace-nowrap">
-                                  <span class="text-sm font-medium text-gray-900">Pincode</span>
-                              </td>
-                              <td class="px-6 py-4 whitespace-nowrap">
-                                  <span class="text-sm text-gray-700"><%= address.pincode %></span>
-                              </td>
-                          </tr>
-                          <tr>
-                              <td class="px-6 py-4 whitespace-nowrap">
-                                  <span class="text-sm font-medium text-gray-900">City</span>
-                              </td>
-                              <td class="px-6 py-4 whitespace-nowrap">
-                                  <span class="text-sm text-gray-700"><%= address.city %></span>
-                              </td>
-                          </tr>
-                          <tr>
-                              <td class="px-6 py-4 whitespace-nowrap">
-                                  <span class="text-sm font-medium text-gray-900">State</span>
-                              </td>
-                              <td class="px-6 py-4 whitespace-nowrap">
-                                  <span class="text-sm text-gray-700"><%= address.state %></span>
-                              </td>
-                          </tr>
-                          <tr>
-                              <td class="px-6 py-4 whitespace-nowrap">
-                                  <span class="text-sm font-medium text-gray-900">Country</span>
-                              </td>
-                              <td class="px-6 py-4 whitespace-nowrap">
-                                  <span class="text-sm text-gray-700"><%= address.country %></span>
-                              </td>
-                          </tr>
-                      </tbody>
-                  </table>
-              </div>
-              </div>
-
-            </section>
-
-
-    <section>
-
-
-              <div class="mt-6 flex-auto w-40">
-                
-              </div>
-            </section>  
-
-    <section>
-
-
-              <div class="mt-6 flex-auto">
-                <h3 class="text-lg font-bold text-[#333] mb-6">Payment Method</h3>
-
-
-                <div class="flex items-center mb-4">
-                  
-                    
-                    <input  id="default-radio-1" type="radio" value="Cash on Delivery" name="paymentMethod" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300  dark:bg-gray-700 dark:border-gray-600">
-                    <label  for="paymentMethod" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-900">Cash on Delivery</label>
-         
-                    <input id="default-radio-2" type="radio" value="Razor Pay" name="paymentMethod" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300  dark:bg-gray-700 dark:border-gray-600">
-                    <label for="paymentMethod" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-900">Razor Pay</label>
-
-                   
-                </div>
-                
-
-                <div class="flex gap-6 max-sm:flex-col mt-10">
-                  <button type="button" class="rounded-md px-6 py-3 w-full text-sm font-semibold bg-stone-300 hover:bg-gray-100 border-2 text-[#333]">Cancel</button>
-                  <button id="placeOrder" type="button" class="rounded-md px-6 py-3 w-full text-sm font-semibold bg-[#333] text-white hover:bg-[#222]">
-                    Complete Purchase
-                </button>
-                </div>
-              </div>
-            </section>  
-
-            </form>
-          </div>
-        </div>
-      </div>
 </main>
 
-<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-<script>
-
-
-document.addEventListener("DOMContentLoaded", function() {
-    
-    const placeOrderButton = document.getElementById('placeOrder');
-    placeOrderButton.addEventListener('click', function() {
-
-        console.log('IT REACHED HERE')
-        const paymentMethod = document.getElementsByName('paymentMethod');
-    let selectedValue = "";
-
-    const totalPriceElement = document.getElementById('totalPrice');
-        const totalPrice = parseFloat(totalPriceElement.textContent);
-
-console.log('THE WHOLE PRICE : ',totalPrice)
-
-    paymentMethod.forEach(radio => {
-        if (radio.checked) {
-            selectedValue = radio.value;
-        }
-    });
-if(!selectedValue){
-    alert('Please select a payment method')
-}
-      if(selectedValue == "Cash on Delivery"){
-
-     
-        const paymentMethod = selectedValue;
-
-
-       fetch('/placeOrder',{
-        method:"POST",
-        headers:{
-            "Content-Type" : "application/json"
-        },
-        body:JSON.stringify({
-            totalPrice : totalPrice,
-            paymentMethod : paymentMethod
-
-        })
-       })
-
-
-      }else{
-
-        fetch('/verifyOrder',{
-        method:"POST",
-        headers:{
-            "Content-Type" : "application/json"
-        },
-        body:JSON.stringify({
-            totalPrice : totalPrice,
-            paymentMethod : paymentMethod
-
-        })
-       })
-
-
-       
-      
-
-var options = {
-    "key": "rzp_test_3aIOQlQc4egRLE", 
-    "amount": totalPrice * 100,
-    "currency": "INR",
-    "name": "OneCart", 
-    "description": "Test Transaction",
-    "image": "/images/onecart-log.avif",
-    "order_id": "order_O0z8kUvXNn8qmR", 
-    "handler": function (response){
-        alert(response.razorpay_payment_id);
-        alert(response.razorpay_order_id);
-        alert(response.razorpay_signature)
-    },
-    "prefill": { 
-        "name": "Gaurav Kumar", //your customer's name
-        "email": "gaurav.kumar@example.com", 
-        "contact": "9000090000"  //Provide the customer's phone number for better conversion rates 
-    },
-    "notes": {
-        "address": "Razorpay Corporate Office"
-    },
-    "theme": {
-        "color": "#3399cc"
-    }
-};
-var rzp1 = new Razorpay(options);
-rzp1.on('payment.failed', function (response){
-        alert(response.error.code);
-        alert(response.error.description);
-        alert(response.error.source);
-        alert(response.error.step);
-        alert(response.error.reason);
-        alert(response.error.metadata.order_id);
-        alert(response.error.metadata.payment_id);
-});
-document.getElementById('placeOrder').onclick = function(e){
-    rzp1.open();
-    e.preventDefault();
-}
-
-        
-      }
-    
-})
-
-
-   })
-     
-      
-  
-
-
-
-
-
-
-// const placeOrder = async(addressId, totalPrice) => {
-//     const selectedPaymentMethod = document.querySelector('input[name="paymentMethod"]:checked').value;
-
-//     const requestData = {
-//         addressId,
-//         totalPrice,
-//         paymentMethod: selectedPaymentMethod };
-
-//     try {
-//         const response = await fetch('/placeOrder', {
-//             method: 'POST',
-//             headers: {
-//                 'Content-Type': 'application/json'
-//             },
-//             body: JSON.stringify(requestData)
-//         });
-
-//         if (response.ok) {
-//             window.location.href = '/orderSuccess';
-//         } else {
-//             console.error('Failed to place order:', response.statusText);
-//         }
-//     } catch (error) {
-//         console.error('Error placing order:', error);
-//     }
-// };
-
-
-
-</script>
 
 <%- include('../partials/footer') %>
