--- a/views/user/userAddress.ejs
+++ b/views/user/userAddress.ejs
@@ -18,7 +18,7 @@
           </div>
           <div class="mt-6 grid grid-cols-1 gap-4 sm:grid-cols-3 ">
               <% address.forEach( add => { %>
-              <div class="border-t border-gray-100 bg-white rounded-md shadow-md overflow-hidden border border-gray-950">
+              <div class="border-t border-gray-100 bg-white rounded-md shadow-md overflow-hidden border">
                   <dl class="divide-y divide-gray-100">
                       <div class="px-4 py-6">
                           <dt class="text-sm font-medium leading-6 text-gray-900">Name</dt>
