--- a/views/user/userProfile.ejs
+++ b/views/user/userProfile.ejs
@@ -1,28 +1,103 @@
 <%- include('../partials/header') %>
 
+<link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css">
+
 <main class="flex justify-between">
 <section class="justify-start">
     <%- include('../partials/userProfile') %>
 </section>
 
-<section class="flex justify-center items-center mr-96 pr-44 mb-80">
+<section class="mt-28 pt-52">
 
-<div class="w-full max-w-sm bg-white  ">
-    <div class="flex justify-center px-52 pt-1">
+   
 
+  <section class="h-500-px">
+    <div class=" top-0 w-full h-full bg-center bg-cover bg-white shadow-xl">
+      <span id="blackOverlay" class="w-full h-full  opacity-50 "></span>
     </div>
-    <div class="flex flex-col items-center py-20 h-48 ">
-        <img class="w-24 h-24 mb-3 shadow-lg" src="https://thumbs.dreamstime.com/z/person-gray-photo-placeholder-man-costume-background-146157490.jpg" alt="Bonnie image"/>
-        <h5 class="mt-5 text-xl font-medium text-gray-900 dark:text-black">Name: Syam </h5>
-        <span class="mt-5 text-sm text-gray-950 dark:text-gray-950">Gender: Male</span>
-        <span class="mt-5 mt-5text-sm text-gray-950 dark:text-gray-950">Email: Syamnanadhu3@gmail.com</span>
-        <span class="mt-5 text-sm text-gray-950 dark:text-gray-950">Phone: 8848700346</span>
-        <span class="mt-5 text-sm text-gray-950 dark:text-gray-950">Address: kottaram veetil, panmana, kollam ,india</span>
+    <div class="top-auto bottom-0 left-0 right-0 w-full  pointer-events-none overflow-hidde h-70-px" style="transform: translateZ(0px)">
+     
+        <polygon class="text-blueGray-200 fill-current" points="2560 0 2560 100 0 100"></polygon>
+      </svg>
+    </div>
+  </section>
+  <section class=" py-16 bg-blueGray-200">
+    <div class="container mx-auto px-4">
+      <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-xl rounded-lg -mt-64">
+        <div class="px-6">
+          <div class="flex flex-wrap justify-center">
+            <div class="w-full lg:w-3/12 px-4 lg:order-2 flex justify-center">
+              <div class="relative">
+                <img alt="..." src="https://demos.creative-tim.com/notus-js/assets/img/team-2-800x800.jpg" class="shadow-xl rounded-full h-auto align-middle border-none  -m-16 -ml-20 lg:-ml-16 max-w-150-px">
+              </div>
+            </div>
+            <div class="w-full lg:w-4/12 px-4 lg:order-3 lg:text-right lg:self-center">
+              <div class="py-6 px-3 mt-32 sm:mt-0">
+         
+              </div>
+            </div>
+            <div class="w-full lg:w-4/12 px-4 lg:order-1">
+              <div class="flex justify-center py-4 lg:pt-1 pt-1">
+                <div class="mr-4 p-3 text-center">
+                  <span class="text-xl font-bold block uppercase tracking-wide text-blueGray-600">22</span><span class="text-sm text-blueGray-400">Products</span>
+                </div>
+                <div class="mr-4 p-3 text-center">
+                  <span class="text-xl font-bold block uppercase tracking-wide text-blueGray-600">10</span><span class="text-sm text-blueGray-400">Whishlisted</span>
+                </div>
+                <div class="lg:mr-4 p-3 text-center">
+                  <span class="text-xl font-bold block uppercase tracking-wide text-blueGray-600">89</span><span class="text-sm text-blueGray-400">Orders</span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="text-center mt-12">
+           
+            <h3 class="text-4xl font-semibold leading-normal mb-2 text-blueGray-700 pt-12">
+                <%= address[0].name %>
+            </h3>
+            <div class="text-sm leading-normal mt-0 mb-2 text-blueGray-400 font-bold uppercase">
+              <i class="fas fa-map-marker-alt mr-2 text-lg text-blueGray-400"></i>
+              <%= address[0].state %> <%= address[0].country %>
+            </div>
+           
+           
+            <div class="mb-2 text-blueGray-600 mt-10">
+              <i class="fas fa-briefcase mr-2 text-lg text-blueGray-400"></i>Gender - Creative Tim Officer
+            </div>
+            <div class="mb-2 text-blueGray-600 mt-10">
+              <i class="fas fa-briefcase mr-2 text-lg text-blueGray-400"></i>Email  - <%= user.email %>
+            </div>
+            <div class="mb-2 text-blueGray-600">
+              <i class="fas fa-university mr-2 text-lg text-blueGray-400"></i>Phone -  <%= user.phone %> 
+            </div>
+            <div class="mb-2 text-blueGray-600justify-center "> 
+                <a class="flex-col grid-cols-2 " href="/userEdit"> Edit </a>
+           
+               </div>
        
+          </div>
+          <div class="mt-10 py-10 border-t border-blueGray-200 text-center">
+            <div class="flex flex-wrap justify-center">
+              <div class="w-full lg:w-9/12 px-4">
+                <p class="mb-4 text-lg leading-relaxed text-blueGray-700">
+                    At OneCart, we're dedicated to bringing you Mr.<%= user.name %> the latest trends in
+                     clothing, watches, and footwear, all in one convenient place. Whether you're looking
+                      to upgrade your wardrobe with stylish outfits, accessorize with fashionable watches,
+                     or find the perfect pair of shoes to complete your look, we've got you covered.
+                </p>
+                <a href="#pablo" class="font-normal text-pink-500">Danke</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
 
-</section>
+  </section>
+
+  </section>
+
+
 
 </main>
 
