--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -78,8 +78,10 @@
 
                 <section class="mt-12">
                     <h3 class="text-lg font-bold text-[#333] mb-6">Coupons</h3>
-                        <select id="couponValues" class="bg-gray-50 h-10 rounded-xl border border-gray-300 text-gray-900 text-sm  focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5  dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-900 dark:focus:ring-blue-500 dark:focus:border-blue-500">
-                            <option selected disabled  selected> Choose Coupon </option>
+                
+                    <input id="couponSearch" class="w-56 h-9 border border-gray-950" type="text" placeholder="search coupon">
+                        <select id="couponValues" class="bg-gray-50 h-9 w-56 mt-5 border border-gray-300 text-gray-900 text-sm  focus:ring-blue-500 focus:border-blue-500 block p-1.5  dark:border-gray-600 dark:placeholder-gray-400 dark:text-gray-900 dark:focus:ring-blue-500 dark:focus:border-blue-500">
+                            <option selected disabled  selected> Available Coupons </option>
                             <% coupon.forEach(coup => { %>
                             <option value="<%= coup.discount %>"><%= coup.couponCode %></option>
                             
@@ -155,7 +157,7 @@
                         </div>
                         <div
                             class="flex items-center w-full py-4 text-sm font-semibold border-b border-gray-300 lg:py-5 lg:px-3 text-heading last:border-b-0 last:text-base last:pb-0">
-                            Total<span id="totalPrice" class="ml-2"> <%= totalPrice %>₹</span></div>
+                            Total<span id="totalPrice" class="ml-2"> <%= totalPrice %></span>₹</div>
                     </div>
                 </div>
             </div>
@@ -268,25 +270,62 @@ if(!selectedValue){
                 }}})
             });
 
+
    //<------------ coupon applying -------------->
-
 const addCouponButton = document.getElementById('addCoupon');
-
 addCouponButton.addEventListener('click', () => {
+    const couponSearch = document.getElementById('couponSearch').value;
 
-    
-    const subTotal = parseFloat(document.getElementById('subTotal').innerText);
+    if(couponSearch){
+        
+        const total = document.getElementById('totalPrice').innerText;
+       fetch('/couponSearch',{
+        method:"POST",
+          headers:{
+              "Content-Type" : "application/json"
+          },
+          body:JSON.stringify({
+              searchValue : couponSearch,
+              totalPrice : total
+            })
+       }).then(response => {
+    if (response.ok) {
+        return response.json()}
+            throw new Error('Network response was not ok.');
+        })
+        .then(data => {
+            let discount = parseFloat(data.discountPrice);
+      
+            const subTotal = parseFloat(document.getElementById('subTotal').innerText);
 
 
-    const discount = parseFloat(document.getElementById('couponValues').value);
 
-    const discountAmount = (subTotal * discount) / 100;
 
-    const total = document.getElementById('totalPrice').innerText = subTotal - discountAmount +"₹";
+const discountAmount = (subTotal * discount) / 100;
 
-    const discountDisplay = document.getElementById('discountAmount').innerText = discountAmount;
+const total = document.getElementById('totalPrice').innerText = subTotal - discountAmount ;
 
-    console.log('Selected coupon:', selectedCoupon);
+const discountDisplay = document.getElementById('discountAmount').innerText = discountAmount;
+
+console.log('Selected coupon:', selectedCoupon);
+        });
+          
+        
+        
+
+      
+
+    }else{
+        if(couponSearch){
+            alert('Cannot select multiple options')
+        }else{
+            const subTotal = parseFloat(document.getElementById('subTotal').innerText);
+            const discount = parseFloat(document.getElementById('couponValues').value);
+            const discountAmount = (subTotal * discount) / 100;
+            const total = document.getElementById('totalPrice').innerText = subTotal - discountAmount;
+            const discountDisplay = document.getElementById('discountAmount').innerText = discountAmount;
+        }
+    }
 });
 
 
