user Profile completed

--- a/views/user/addressAdd.ejs
+++ b/views/user/addressAdd.ejs
@@ -2,7 +2,7 @@
 
 <main class="flex justify-start">
 <section class="justify-start">
-    <%- include('../partials/userProfile') %>
+    <%- include('../partials/userProfileSidebar') %>
 </section>
 
     <section class="p-12"> 
