--- a/views/partials/userProfileSidebar.ejs
+++ b/views/partials/userProfileSidebar.ejs
@@ -128,7 +128,7 @@
                     d="M7.691 34.703L13.95 28.2 32.09 52h8.087L18.449 23.418 38.594.813h-8.157L7.692 26.125V.812H.941V52h6.75V34.703zm27.61-7.793h17.156v-5.308H35.301v5.308zM89.19 13v22.512c0 3.703-1.02 6.574-3.058 8.613-2.016 2.04-4.934 3.059-8.754 3.059-3.773 0-6.68-1.02-8.719-3.059-2.039-2.063-3.058-4.945-3.058-8.648V.813h-6.68v34.874c.047 5.297 1.734 9.458 5.062 12.481 3.328 3.023 7.793 4.535 13.395 4.535l1.793-.07c5.156-.375 9.234-2.098 12.234-5.168 3.024-3.07 4.547-7.02 4.57-11.848V13h-6.785zM89 8h7V1h-7v7z"
                   />
                 </svg> -->
-               
+                
               </a>
             </div>
 
@@ -136,9 +136,9 @@
             <div class="flex-1 px-4 space-y-2 overflow-hidden hover:overflow-auto ">
 <div class="w-full max-w-sm bg-white rounded-lg shadow dark:bg-violet-700 dark:border-gray-700">
   <div class="flex flex-col items-center pb-10">
-      <img class="w-12 h-12 mb-3 mt-6   rounded-full shadow-lg" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRLMI5YxZE03Vnj-s-sth2_JxlPd30Zy7yEGg&usqp=CAU" alt="Bonnie image"/>
-      <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white">Syam</h5>
-      <span class="text-sm text-gray-500 dark:text-gray-400">Visual Designer</span>
+      <img class="w-12 h-14 mb-3 mt-6   rounded-full shadow-lg" src="/product_images/<%= user.userImage %>" alt="Bonnie image"/>
+      <h5 class="mb-1 text-xl font-medium text-gray-900 dark:text-white"><%= user.name %></h5>
+      <span class="text-sm text-gray-500 dark:text-gray-400"><%= user.email %></span>
 
   </div>
 </div>
