--- a/views/admin/category-list.ejs
+++ b/views/admin/category-list.ejs
@@ -21,17 +21,17 @@
     </div>
 
     <div class="w-full">
-      <table class="items-center bg-transparent border-collapse ">
+      <table class="items-center bg-transparent border-collapse w-full">
         <thead>
             
           <tr>
-            <th class=" bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 px-12 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
+            <th class=" bg-blueGray-200 pl-5 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
                          Name</th>
-            <th class=" bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 px-36 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
+            <th class=" bg-blueGray-200 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3  text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
                          Description</th>
-          <th class=" bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 px-36 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
+          <th class=" bg-blueGray-200 text-blueGray-500  border border-solid border-blueGray-100 py-3 pr-20  text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold">
                           Edit</th>
-          <th class=" bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
+          <th class=" bg-blueGray-200 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 pr-20 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
                           Delete</th>
         
          
@@ -41,23 +41,22 @@
         <tbody>
             <% categories.forEach(category => { %>
           <tr>
-         
-            <td class="border-t-0 px-12 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap py-4">
+            <td class="border-t-0 pl-5 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap">
                 <%= category.categoryName %>
             </td>
          
-            <td class="border-t-0 px-36 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap py-4">
+            <td class="border-t-0 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap w-auto">
                 <%= category.description %>
             </td>
      
-            <td class="border-t-0 px-36 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap ">
+            <td class="border-t-0 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap">
                 <a href="./category-edit/<%= category._id %>" class="font-medium font-sans text-xs text-red-950  hover:underline">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3 h-3">
                         <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L6.832 19.82a4.5 4.5 0 0 1-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 0 1 1.13-1.897L16.863 4.487Zm0 0L19.5 7.125" />
                       </svg>
                   </a>
             </td>
-            <td class="border-t-0 px-36 align-center border-l-0 border-r-0 text-xs whitespace-nowrap p-4">
+            <td class="border-t-0 align-center border-l-0 border-r-0 text-xs whitespace-nowrap p-4">
                 <a href="./category-block/<%= category._id %>" class="font-medium text-red-950  hover:underline">
                     <% if (category.deleted == false) { %>
                         <span class="relative flex h-3 w-3">
