--- a/views/user/userProfile.ejs
+++ b/views/user/userProfile.ejs
@@ -74,7 +74,11 @@
                 <a class="flex-col grid-cols-2 text-blue-700 border-2 border-gray-300 hover:text-green-300 font-mono rounded-full" href="/userEdit"> Edit </a>
            
                </div>
-       
+               <% if(wallet[0] > 0){ %>
+               <div class="mb-2 text-blueGray-600">
+                <i class="fas fa-university mr-2 text-lg text-blueGray-400"></i>Wallet Balance :  <%= wallet[0].amount  %>
+              </div>
+       <% } %>
           </div>
           <div class="mt-10 py-10 border-t border-blueGray-200 text-center">
             <div class="flex flex-wrap justify-center">
